force-app/main/default/objects/Claim_Payment__c/Claim_Payment__c.object-meta.xml
<CustomObject>
    <description>History of payments received, discounts, write off, manual adjustments.</description>
    <label>Claim Payment</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Claim Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>