force-app/main/default/objects/Claim_Payment__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <label>Bank Account</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOA 1905</fullName>
            </value>
            <value>
                <fullName>BOA 1976</fullName>
            </value>
            <value>
                <fullName>BOA 7682</fullName>
            </value>
            <value>
                <fullName>IFB 9121</fullName>
            </value>
            <value>
                <fullName>IFB 9180</fullName>
            </value>
            <value>
                <fullName>IFB 9113</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>