force-app/main/default/objects/Claim_Payment__c/fields/Bank_Fees__c.field-meta.xml
<CustomField>
    <fullName>Bank_Fees__c</fullName>
    <formula>IF(ISPICKVAL(Payment_Type__c, &apos;Bank fees&apos;), Amount__c ,0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>