force-app/main/default/objects/Claim_Payment__c/fields/Batch_Deposit_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Deposit_Date__c</fullName>
    <label>Batch Deposit Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>