force-app/main/default/objects/Claim_Payment__c/fields/Batch_Deposit_Total__c.field-meta.xml
<CustomField>
    <fullName>Batch_Deposit_Total__c</fullName>
    <label>Batch Deposit Total</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>