force-app/main/default/objects/Claim_Payment__c/fields/Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Number__c</fullName>
    <label>Claim Number</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Claim Payments</relationshipLabel>
    <relationshipName>Claim_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>