force-app/main/default/objects/Claim_Payment__c/fields/Client_Customer__c.field-meta.xml
<CustomField>
    <fullName>Client_Customer__c</fullName>
    <label>Payment Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Client Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>