force-app/main/default/objects/Claim_Payment__c/fields/Collector__c.field-meta.xml
<CustomField>
    <fullName>Collector__c</fullName>
    <inlineHelpText>Collectors at a Claim Payment Level</inlineHelpText>
    <label>Collector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
                <default>true</default>
                <label>Admin</label>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Andrea Greenblatt</fullName>
            </value>
            <value>
                <fullName>Ashton Kanhere</fullName>
            </value>
            <value>
                <fullName>Edward Lacey</fullName>
            </value>
            <value>
                <fullName>External Collection</fullName>
            </value>
            <value>
                <fullName>Giselle Ortez</fullName>
            </value>
            <value>
                <fullName>Hilal Dar</fullName>
            </value>
            <value>
                <fullName>Joanne Sierra</fullName>
            </value>
            <value>
                <fullName>Jose Reyes</fullName>
            </value>
            <value>
                <fullName>Karl Daskar</fullName>
            </value>
            <value>
                <fullName>Marc Gelb</fullName>
            </value>
            <value>
                <fullName>Moe Shannon</fullName>
            </value>
            <value>
                <fullName>Mohammad Musaib</fullName>
            </value>
            <value>
                <fullName>Mursaleen Nissar</fullName>
            </value>
            <value>
                <fullName>Mursalin Mir</fullName>
            </value>
            <value>
                <fullName>Nancy Shay</fullName>
            </value>
            <value>
                <fullName>Peter Freeman</fullName>
            </value>
            <value>
                <fullName>Shahid Shah</fullName>
            </value>
            <value>
                <fullName>Sharif Mohi</fullName>
            </value>
            <value>
                <fullName>Steve Thomson</fullName>
            </value>
            <value>
                <fullName>Ubaldo Young</fullName>
            </value>
            <value>
                <fullName>Uzaifa Qadir</fullName>
            </value>
            <value>
                <fullName>Valerie Sheregar</fullName>
            </value>
            <value>
                <fullName>Vanessa Ambar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>