force-app/main/default/objects/Claim_Payment__c/fields/Date_Paid_To_Client__c.field-meta.xml
<CustomField>
    <fullName>Date_Paid_To_Client__c</fullName>
    <label>Date Paid To Client</label>
    <type>Date</type>
</CustomField>