force-app/main/default/objects/Claim_Payment__c/fields/Due_to_Client1__c.field-meta.xml
<CustomField>
    <fullName>Due_to_Client1__c</fullName>
    <label>Due to Client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>