force-app/main/default/objects/Claim_Payment__c/fields/Earned_Fee__c.field-meta.xml
<CustomField>
    <fullName>Earned_Fee__c</fullName>
    <formula>IF(  
    OR(
        ISPICKVAL(Payment_Type__c, &apos;Insurance Payment&apos;),
        ISPICKVAL(Payment_Type__c, &apos;Patient Payment&apos;),
        ISPICKVAL(Payment_Type__c, &apos;Patient down payment WF&apos;),
        ISPICKVAL(Payment_Type__c, &apos;Patient Refund&apos;),
        ISPICKVAL(Payment_Type__c, &apos;Courtesy Payment&apos;)
       ),
(Amount__c*Claim_Number__r.Claim_Rate__c), 0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earned Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>