force-app/main/default/objects/Claim_Payment__c/fields/Earned_fee_workflow__c.field-meta.xml
<CustomField>
    <fullName>Earned_fee_workflow__c</fullName>
    <label>Earned fee workflow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>