force-app/main/default/objects/Claim_Payment__c/fields/Facility_Comments__c.field-meta.xml
<CustomField>
    <fullName>Facility_Comments__c</fullName>
    <label>Facility Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>