force-app/main/default/objects/Claim_Payment__c/fields/Facility_Fee_For_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Facility_Fee_For_Invoice__c</fullName>
    <label>Facility Fee For Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>