force-app/main/default/objects/Claim_Payment__c/fields/Facility_Total__c.field-meta.xml
<CustomField>
    <fullName>Facility_Total__c</fullName>
    <formula>Facility_Fee_For_Invoice__c  *  Claim_Number__r.Claim_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>