force-app/main/default/objects/Claim_Payment__c/fields/Insurance_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Company Name</label>
    <referenceTo>Insurance_Company__c</referenceTo>
    <relationshipLabel>Claim Payments</relationshipLabel>
    <relationshipName>Claim_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>