force-app/main/default/objects/Claim_Payment__c/fields/Insurance_Payment__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Payment__c</fullName>
    <formula>IF(ISPICKVAL(Payment_Type__c, &apos;Insurance Payment&apos;), Amount__c  ,0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>