force-app/main/default/objects/Claim_Payment__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <displayFormat>FN-{000}</displayFormat>
    <label>Facility Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>