force-app/main/default/objects/Claim_Payment__c/fields/Manual_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Manual_Adjustment__c</fullName>
    <formula>IF(ISPICKVAL(Payment_Type__c, &apos;Manual Adjustment&apos;), Amount__c ,0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manual Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>