force-app/main/default/objects/Claim_Payment__c/fields/Paid_Earn_Fees__c.field-meta.xml
<CustomField>
    <fullName>Paid_Earn_Fees__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Paid Earn Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>