force-app/main/default/objects/Claim_Payment__c/fields/Paid_to_client__c.field-meta.xml
<CustomField>
    <fullName>Paid_to_client__c</fullName>
    <label>Paid to client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>