force-app/main/default/objects/Claim_Payment__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <label>Date Paid</label>
    <required>true</required>
    <type>Date</type>
</CustomField>