force-app/main/default/objects/Claim_Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <inlineHelpText>Type of payment received or other accounting transactions ex. Legal fee, Bank Fee, Network Discounts, or Manual Adjustment.</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Client_Customer__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Insurance Payment</fullName>
                <default>true</default>
                <label>Insurance Payment</label>
            </value>
            <value>
                <fullName>Patient Payment</fullName>
            </value>
            <value>
                <fullName>Courtesy Payment</fullName>
            </value>
            <value>
                <fullName>Patient down payment NF</fullName>
            </value>
            <value>
                <fullName>Patient down payment WF</fullName>
            </value>
            <value>
                <fullName>Legal Fees</fullName>
            </value>
            <value>
                <fullName>Bank fees</fullName>
            </value>
            <value>
                <fullName>Network Discounts</fullName>
            </value>
            <value>
                <fullName>Manual Adjustment</fullName>
            </value>
            <value>
                <fullName>Earned Fees</fullName>
            </value>
            <value>
                <fullName>Client Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>