force-app/main/default/objects/Claim_Payment__c/fields/Professional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Professional_Comments__c</fullName>
    <label>Professional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>