force-app/main/default/objects/Claim_Payment__c/fields/Professional_Fee_For_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Professional_Fee_For_Invoice__c</fullName>
    <label>Professional Fee For Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>