force-app/main/default/objects/Claim_Payment__c/fields/Professional_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Professional_Invoice_Number__c</fullName>
    <displayFormat>PN-{000}</displayFormat>
    <label>Professional Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>