force-app/main/default/objects/Claim_Payment__c/fields/Professional_Total__c.field-meta.xml
<CustomField>
    <fullName>Professional_Total__c</fullName>
    <formula>Professional_Fee_For_Invoice__c *  Claim_Number__r.Claim_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Professional Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>