force-app/main/default/objects/Claim_Payment__c/fields/Show_in_Report__c.field-meta.xml
<CustomField>
    <fullName>Show_in_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show in Report</label>
    <type>Checkbox</type>
</CustomField>