force-app/main/default/objects/Claim_Payment__c/fields/Who_received_the_money__c.field-meta.xml
<CustomField>
    <fullName>Who_received_the_money__c</fullName>
    <label>Payment Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Received Partial Payment</fullName>
            </value>
            <value>
                <fullName>Client Received Payment</fullName>
            </value>
            <value>
                <fullName>Partial Earned Fee Payments</fullName>
            </value>
            <value>
                <fullName>Patient Discount</fullName>
            </value>
            <value>
                <fullName>Patient Refund</fullName>
            </value>
            <value>
                <fullName>Payment Received</fullName>
            </value>
            <value>
                <fullName>Payment Received Partial</fullName>
            </value>
            <value>
                <fullName>Write-Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>