force-app/main/default/objects/Claim_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Due_to_Client1__c</columns>
    <columns>Earned_Fee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>