force-app/main/default/objects/Claim_Payment__c/listViews/Claim_Payment_View.listView-meta.xml
<ListView>
    <fullName>Claim_Payment_View</fullName>
    <columns>NAME</columns>
    <columns>Payment_Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Collector__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Insurance_Payment__c</columns>
    <columns>Insurance_Company_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Claim Payment View</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>